fix Firefox All Results focus makes it unreadable

--- a/css/tweaks.css
+++ b/css/tweaks.css
@@ -93,6 +93,6 @@ div.extra-info ul li a {
   margin-right: .25em;
 }
 
-a.all-results:hover {
+a.all-results:hover, a.all-results:focus {
   color: white;
 }
